<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/main_menu_menu">
        <menu>
            <item
                android:id="@+id/main_menu_my_account_button"
                android:icon="@drawable/outline_account_circle_24"
                android:title="@string/main_menu_my_account" />

            <item
                android:id="@+id/main_menu_settings_button"
                android:icon="@drawable/outline_settings_24"
                android:title="@string/main_menu_settings" />

            <item
                android:id="@+id/main_menu_faq_button"
                android:icon="@drawable/outline_help_outline_24"
                android:title="@string/main_menu_FAQ" />

            <item
                android:id="@+id/main_menu_about_us_button"
                android:icon="@drawable/outline_info_24"
                android:title="@string/main_menu_about_us" />
        </menu>
    </item>
</menu>
