<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="General settings">

        <ListPreference
            android:defaultValue="0"
            android:entries="@array/settings_theme_choosing_labels"
            android:entryValues="@array/settings_theme_choosing_values"
            android:key="settings_theme_choosing"
            android:summary="@string/settings_theme_choosing_desc"
            android:title="@string/settings_theme_choosing_name"
            app:icon="@drawable/outline_contrast_24" />
    </PreferenceCategory>

    <PreferenceCategory android:title="Other">

        <Preference
            android:key="settings_about"
            android:summary="@string/settings_about_summary"
            android:title="@string/settings_about_label"
            app:icon="@drawable/outline_info_24" />
    </PreferenceCategory>
</PreferenceScreen>
