<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:paddingLeft="30dp"
    android:paddingRight="30dp">

    <ImageButton
        android:id="@+id/sign_up_back_button"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/outline_arrow_back_ios_24"
        android:backgroundTint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/outline_arrow_back_ios_24"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/sign_up_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:fontFamily="@font/sfprodisplay_bold"
        android:text="@string/sign_up_sign_up"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/sign_up_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="49dp"
        android:autofillHints="no"
        android:backgroundTint="@color/blue_500"
        android:ems="10"
        android:fontFamily="@font/sfprodisplay_regular"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textColorHint="@color/gray"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_welcome" />

    <Button
        android:id="@+id/sign_up_sign_up_button"
        style="@style/ButtonStyle"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="49dp"
        android:text="@string/sign_up"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_password_input" />

    <EditText
        android:id="@+id/sign_up_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:autofillHints="no"
        android:backgroundTint="@color/blue_500"
        android:ems="10"
        android:fontFamily="@font/sfprodisplay_regular"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@color/gray"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_email_input" />

    <EditText
        android:id="@+id/sign_up_email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:autofillHints="no"
        android:backgroundTint="@color/blue_500"
        android:ems="10"
        android:fontFamily="@font/sfprodisplay_regular"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/gray"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_name_input" />

</androidx.constraintlayout.widget.ConstraintLayout>